src/test/ui/borrowck/issue-45983.stderr
error: borrowed data cannot be stored outside of its closure
  --> $DIR/issue-45983.rs:17:27
   |
16 |     let x = None;
   |         - borrowed data cannot be stored into here...
17 |     give_any(|y| x = Some(y));
   |              ---          ^ cannot be stored outside of its closure
   |              |
   |              ...because it cannot outlive this closure

error: aborting due to previous error

